fixing typo and data conversion bug on final debriefing session storage and refining session storage display

--- a/vcweb/bound/templates/bound/participate.html
+++ b/vcweb/bound/templates/bound/participate.html
@@ -142,13 +142,13 @@
         </iframe>
     </div>
     <h2>Payments</h2>
-    <table class='table'>
+    <table class='table table-bordered table-condensed'>
         <thead>
             <tr><th>Session 1</th><th>Session 2</th></tr>
         </thead>
         <tbody>
-            <tr><td><span data-bind='text: sessionOneStorage'></span><br><span data-bind='text: sessionOneEarnings'</span></td>
-                <td><span data-bind='text: sessionTwoStorage'></span><br><span data-bind='text: sessionTwoEarnings'></span></td>
+            <tr><td><span class='badge badge-success' data-bind='text: sessionOneStorage'></span> <span class='text-success' data-bind='text: sessionOneEarnings'</span></td>
+                <td><span class='badge badge-success' data-bind='text: sessionTwoStorage'></span> <span class='text-success' data-bind='text: sessionTwoEarnings'></span></td>
             </tr>
         </tbody>
     </table>
