renaming classStatus -> class_status (retroactively applied to migration since we haven't applied it to prod yet)

--- a/vcweb/core/templates/account/profile.html
+++ b/vcweb/core/templates/account/profile.html
@@ -29,7 +29,7 @@
                     major: {
                         required: "#id_can_receive_invitations:checked"
                     },
-                    classStatus: {
+                    class_status: {
                         required: "#id_can_receive_invitations:checked"
                     },
                     gender: {
@@ -51,7 +51,7 @@
                 },
                 messages: {
                     major: "We need your major if you want to receive invitations",
-                    classStatus: "we need your class status if you want to receive invitations",
+                    class_status: "we need your class status if you want to receive invitations",
                     gender: "we need your gender if you want to receive invitations",
                     email: {
                         remote: 'Email already exists'
