--- a/vcweb/core/templates/experimenter/register-participants.html
+++ b/vcweb/core/templates/experimenter/register-participants.html
@@ -17,7 +17,7 @@
 {% endblock page %}
 {% block javascript %}
 {{ block.super }}
-{% include "includes/jquery.forms.html" %}
+{% include "includes/jquery.validate.html" %}
 <script type='text/javascript'>
     $(function() {
         $('#vcweb-form').validate();
