--- a/vcweb/core/templates/forms/base.html
+++ b/vcweb/core/templates/forms/base.html
@@ -9,6 +9,6 @@
 {% endblock page %}
 {% block javascript %}
     {{ block.super }}
-    {% include "includes/jquery.forms.html" %}
+    {% include "includes/jquery.validate.html" %}
 {% endblock %}
 
