--- a/vcweb/bound/templates/bound/participate.html
+++ b/vcweb/bound/templates/bound/participate.html
@@ -629,19 +629,19 @@ function onYouTubeIframeAPIReady() {
                     content: "Your last round's harvest decision will be displayed here.  Since this is the first practice round this is currently 0."
                 },
                 { 
-                    element: "#dashboard-storage", title: "Storage", placement: "top",
-                    content: "Your total storage will be displayed here.  You must have at least " + model.costOfLiving() + " trees stored to survive each round."
+                    element: "#dashboard-storage", title: "Savings", placement: "top",
+                    content: "Your total savings will be displayed here.  You must have at least " + model.costOfLiving() + " in savings to survive each round."
                 },
                 { 
                     element: "#dashboard-time", title: "Time Left", placement: "top",
                     content: "The time remaining in this round will be displayed here.  It will turn red when " +model.warningCountdownTime() + " seconds are left."
                 },
                 { 
-                    element: "#chatMessage", title: "Text Chat", placement: "left",
-                    content: "If chat is enabled, you can communicate with your group by typing messages into this box and hitting the enter key or clicking 'Send'."
+                    element: "#chatMessage", title: "Text Chat", placement: "top",
+                    content: "When chat is enabled, you can communicate with your group by typing messages into this box and hitting the enter key."
                 },
                 { 
-                    element: "#harvest-decision-td-10", title: "Harvest Decision", placement: "right",
+                    element: "#harvest-decision-td-10", title: "Harvest Decision", placement: "bottom",
                     content: "Click on the number of trees you'd like to harvest here.  For the purposes of this practice round, please select 10 now and click the 'Ok, I'm ready' button."
                 }]);
                 model.tour().restart();
@@ -750,6 +750,7 @@ function onYouTubeIframeAPIReady() {
                 if (model.templateId() != "REGULAR") {
                     return;
                 }
+                model.setupTour();
                 if (! model.alive()) {
                     model.secondsLeft(0);
                     model.clearCurrentInterval();
@@ -848,7 +849,6 @@ function onYouTubeIframeAPIReady() {
                 model.chatEnabled(! chatDisabled);
             }
             model.afterRenderTemplate = function(elements) {
-                model.setupTour();
                 if (model.isSurveyEnabled()) {
                     switch (model.templateId()) {
                         case "PRACTICE_ROUND_RESULTS":
