more bugfixes to GroupScores exposed by tests

--- a/vcweb/lighterprints/templates/lighterprints/email/group-summary-email.html
+++ b/vcweb/lighterprints/templates/lighterprints/email/group-summary-email.html
@@ -3,7 +3,7 @@
 You are a member of {{ group_name }}.  To participate in this experiment, visit <a href='https://vcweb.asu.edu{{experiment.participant_url}}'>https://vcweb.asu.edu{{experiment.participant_url}}</a>.
 </p>
 <ul>
-    <li>You earned {{ individual_points }} points while the average in your group was {{ average_group_points }} point(s).</li>
+    <li>You earned {{ individual_points }} points while the average in your group was {{ average_points }} point(s).</li>
     <li>{{ number_of_chat_messages }} chat messages were posted by your group.</li>
     {% if show_rankings %}
     <li>Your group was ranked {{ group_rank}} out of {{ number_of_groups }}</li>
